--- a/index.html
+++ b/index.html
@@ -2,100 +2,129 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <meta charset="utf-8">
   <title> Julio's personal site</title>
 
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="https://media-exp1.licdn.com/dms/image/C4D03AQE1lAves8fang/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=egJlcv-Vsgn_4CYuarpKWWA9Wew_wfMlYtbWeBTgjqo" alt="Julio Moreno Profile Picture"></td>
-      <td><h1>Julio Moreno</h1></td>
-      <td><p><em>Full stack <strong>Jr Developer</strong></em></p>
-      <p><em>Senior <strong>Manual QA Engineer</strong></em></p>
-      <p>I am a QA Test Engineer with 10 years of experience and looking to move to Software Web Development</p></td>
-    </tr>
-  </table>
-<hr />
-<h3>Education</h3>
-
-    <p>Universidad Autónoma de Baja California - Bachelors Degree in Computer Engineer</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <figure class="figure">
+        <img src="./images/profilepic.jpeg" class="figure-img img-fluid rounded"
+          alt="Julio Moreno Profile Picture"></figure></div>
+      <div class="col-sm">
+        <h1>Julio Moreno</h1>
+      </div>
+      <div class="col-sm">
+        <p><em>Full stack <strong>Jr Developer</strong></em></p>
+        <p><em>Senior <strong>Manual QA Engineer</strong></em></p>
+        <p>I am a QA Test Engineer with 10 years of experience and looking to move to Software Web Development</p>
+        </td>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="container">
+    <div class="row">
+      <h3>Education</h3>
+    </div>
+    <div class="row">
+      <p>Universidad Autónoma de Baja California - Bachelors Degree in Computer Engineer</p>
+    </div>
+  </div>
+  <hr />
+  <div class="container">
+  <div class="row"> <h3>Work Experience</h3></div>
+  </div>
+    <div class="container">
+      
+        <div class="row">
+          <div class="col">Position</div>
+          <div class="col">Company</div>
+          <div class="col">Working Time</div>
+        </div>
+        <div class="row">
+          <div class="col">QA Test Engineer</div>
+          <div class="col">Ingenico Group</div>
+          <div class="col">Apr 2017 - Jul 2020</div>
+        </div>
+        <div class="row">
+          <div class="col">Software Test Engineer</div>
+            <div class="col">Sensata</div>
+              <div class="col">Jul 2014 - Mar 2016</div>
+        </div>
+        <div class="row">
+          <div class="col">Test Engineer</div>
+            <div class="col">Infosys</div>
+              <div class="col">Jan 2013 - Apr 2014</div>
+        </div>
+        <div class="row">
+          <div class="col">Test Engineer</div>
+          <div class="col">Softtek</div>
+          <div class="col">Nov 2010 - Dec 2012</div>
+        </div>
+      </div>
     <hr />
-<h3>Work Experience</h3>
-<table cellspacing="25">
-  <thead>
-    <tr>
-      <th>Position</th>
-      <th>Company</th>
-      <th>Working Time</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>QA Test Engineer</td>
-      <td>Ingenico Group</td>
-      <td>Apr 2017 - Jul 2020</td>
-    </tr>
-    <tr>
-      <td>Software Test Engineer</td>
-      <td>Sensata</td>
-      <td>Jul 2014 - Mar 2016</td>
-    </tr>
-    <tr>
-      <td>Test Engineer</td>
-      <td>Infosys</td>
-      <td>Jan 2013 - Apr 2014</td>
-    </tr>
-    <tr>
-      <td>Test Engineer</td>
-      <td>Softtek</td>
-      <td>Nov 2010 - Dec 2012</td>
-    </tr>
-  </tbody>
-</table>
-<hr />
-<h3>Skills</h3>
-<table border="1">
-<tr>
-  <td>
-    <table cellspacing="10">
-      <tr>
-        <td>Manual Functional Testing</td>
-        <td>★★★★★</td>
-      </tr>
-      <tr>
-        <td>Test Cases Design</td>
-        <td>★★★★★</td>
-      </tr>
-    <tr>
-      <td>Test Plan Design</td>
-      <td>★★★★</td>
-    </tr>
-    <tr>
-      <td>Scrum Agile</td>
-      <td>★★★★</td>
+   <div class="container">
+      <h3>Skills</h3>
+      <div class="row">
+        <div class=col>
+          <div class="container">
+            <div class="row">
+              <div class="col">Manual Functional Testing</div>
+                <div class="col">★★★★★</div>
+                </div>
+                <div class="row">
+                  <div class="col">Test Cases Design</div>
+                  <div class="col">★★★★★</div>
+                </div>
+                <div class="row">
+                  <div class="col">Test Plan Design</div>
+                  <div class="col">★★★★</div>
+                </div>
+                <div class="row">
+                  <div class="col">Scrum Agile</div>
+                  <div class="col">★★★★</div>
 
-    </tr>
-  </table>
-</td>
-<td>
-  <table cellspacing="10">
-    <tr>
-      <td>Web Development</td>
-      <td>★</td>
-    </tr>
-    <tr>
-      <td>Test Automation</td>
-      <td> ★★</td>
-    </tr>
-    </table>
-</td>
-</tr>
-</table>
-<hr/>
-<a href="hobbies.html"><h3>My Hobbies</h3></a>
+                </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="container">
+            <div class="row">
+              <div class="col">Web Development</div>
+              <div class="col">★</div>
+            </div>
+            <div class="row">
+              <div class="col">Test Automation</div>
+              <div class="col">★★</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr/>
+    <!-- <a href="hobbies.html"><h3>My Hobbies</h3></a>
 <a href="socialmedia.html"><h3>Social Media</h3></a>
-<a href="contactme.html"><h3>Contact Me</h3></a>
+<a href="contactme.html"><h3>Contact Me</h3></a> -->
+<div class="container">
+  <h3>Contact Me</h3>
+  <div class="row">
+    <a class="btn btn-primary" href="./hobbies.html" role="button">My Hobbies</a>
+    <a class="btn btn-secondary" href="./socialmedia.html" role="button">Social Media</a>
+    <a class="btn btn-success" href="./contactme.html" role="button">Contact Me</a>
+  </div>
+  </div>
 </body>
+
 </html>
