--- a/contactme.html
+++ b/contactme.html
@@ -2,6 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <meta charset="utf-8">
   <title>Contact Me</title>
 </head>
@@ -10,7 +18,6 @@
   <h1>My Contact Details</h1>
   <p>Email julioc.morenob@gmail.com</p><br />
   <p>Cell 6787178359</p><br/>
-  <p>1510 Nightfall Court, Georgia, US 30040</p><br />
   <hr>
   <form action="mailto:info@julioc.morenob@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
